# tasktracker

./: .gitignore  .pre-commit-config.yaml
backend/: pyproject.toml
backend/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_task_task_group.py  0003_rename_due_time_task_due_dt.py  0004_auto_20210619_0914.py
backend/tasktracker/: celery.py  settings.py  urls.py
backend/tgbot/: admin.py  models.py  services.py
backend/tgbot/management/commands/: send_messages.py
backend/tgbot/migrations/: 0001_initial.py  0002_auto_20210619_0714.py  0003_telegramuser.py  0004_auto_20210619_0903.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Task.vue  Tasks.vue
frontend/src/router/: index.js
